feat: attempt to make the page adaptive

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -98,7 +98,11 @@
                     <button class="arrow_left" onclick="plusSlides(-1)"></button>
                     <button class="arrow_right" onclick="plusSlides(1)"></button>
                 </div>
-                <button class="galery_btn" onclick=""></button>
+                <div class="galery_btn_area">
+                    <button class="galery_btn" onclick="">
+                        <p class="galery_btn_text">choose your favorite</p>
+                    </button>
+                </div>
             </div>
         </section>
         <section class="pick_and_feed">
@@ -145,7 +149,11 @@
                         </div>
                     </div>
                 </div>
-                <button class="pik_feed_button"></button>
+                <div class="pik_feed_button_area">
+                    <button class="pik_feed_button">
+                        <p class="pik_feed_button_text">Feed a friend now</p>
+                    </button>
+                </div>
             </div>
         </section>
         <section class="testimonials">
@@ -198,7 +206,11 @@
                 <div class="base_scrol"></div>
                 <div class="current_scrol"></div>
             </div>
-            <button class="leave_feedback"></button>
+            <div class="leave_feedback_btn_area">
+                <button class="leave_feedback">
+                    <p class="leave_feedback_btn_text">leave feedback</p>
+                </button>
+            </div>
         </section>
     </main>
     <footer>
