fix: fied several places

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -15,6 +15,11 @@
     <div class="container">
         <section class="section1">
             <header class="header">
+                <div class="menu-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <nav class="menu">
                     <div class="logo_reg">
                         <a class="logo" href="../main/index.html">PetStory online</a>
@@ -142,11 +147,11 @@
                         <button class="arrow_left" onclick="plusSlides(-1)"></button>
                         <button class="arrow_right" onclick="plusSlides(1)"></button>
                     </div>
-                    <div class="galery_btn_area">
-                        <button class="galery_btn" onclick="">
-                            <p class="galery_btn_text">choose your favorite</p>
-                        </button>
-                    </div>
+                </div>
+                <div class="galery_btn_area">
+                    <button class="galery_btn" onclick="">
+                        <p class="galery_btn_text">choose your favorite</p>
+                    </button>
                 </div>
             </section>
             <section class="pick_and_feed">
