fix: some fixed for main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -219,7 +219,7 @@
                         <p>Next</p>
                     </div>
                 </div>
-                <div class="scrol">
+                <div class="scroll">
                     <div class="value">1</div>
                     <input type="range" min="0" max="7" step="1" value="0">
                 </div>
@@ -270,8 +270,8 @@
             <a class="nav-item footer_nav-item" href="#Contact us">Contact us</a>
         </nav>
         <div class="signature">
-            <P>Designed by Alisa Samborskaya<br>
-                ©RSSchool & ©Yem Digital 2021</p>
+            <p>Designed by Alisa Samborskaya</p>
+            <p>©RSSchool & ©Yem Digital 2021</p>
         </div>
     </footer>
     <script src="script.js" async defer></script>
